Fix CORS configuration